# CausalImpactExplainer

./: .gitignore  README.md  pyproject.toml
notebooks/: generate_example_data.ipynb
src/: Untitled.ipynb  causal_impact_one_experiment.R  causal_impact_one_experiment.Rmd  causal_impact_one_group.Rmd  dashboard.py  utils.py
